--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
          <fieldset>
             <legend>Add an Employee</legend>
             <label for="first-name">First Name</label><br />
-            <input type="text" placeholder="First Name" id="first-name" /><br />
+            <input
+               type="text"
+               placeholder="First Name"
+               id="first-name"
+               required
+            /><br />
             <label for="last-name">Last Name</label><br />
-            <input type="text" placeholder="First Name" id="last-name" /><br />
+            <input
+               type="text"
+               placeholder="Last Name"
+               id="last-name"
+               required
+            /><br />
             <label for="dept">Department</label><br />
             <select id="dept">
                <option value="IT">IT</option>
